[tool.poetry]
name = "completing-pls"
version = "0.1.0"
description = "Completing partial latin squares in Python with ryser."
authors = ["Matthew Henderson <matthew.james.henderson@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ryser = "v0.2.0"
vizing = "v0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
